# CastClaw

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  flake.nix  install  package.json  sst.config.ts  turbo.json
docs/en/: usage.md
docs/zh/: usage.md
infra/: app.ts  stage.ts
logo/: logo.ts
nix/: castclaw.nix  hashes.json  node_modules.nix
patches/: solid-js@1.9.10.patch
python/: build_wheel.py  pyproject.toml
python/tests/: test_analyzer.py  test_evaluator.py  test_hash.py  test_metrics.py  test_runner_e2e.py  test_safety.py
python/tests/fixtures/: generate_synthetic.py  synthetic_etth1.csv
script/: beta.ts  changelog.ts  duplicate-pr.ts  generate.ts  publish.ts  stats.ts  sync-zed.ts  version.ts
script/github/: close-issues.ts
