[project]
name = "castclaw-ml"
version = "0.1.0"
description = "Castclaw ML experiment runner and evaluator"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision",
    "numpy>=2.1",
    "pandas>=2.3",
    "scikit-learn>=1.7",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "matplotlib>=3.10",
    "einops>=0.8",
    "tqdm>=4.66",
    "pytest>=8.4",
]

[project.optional-dependencies]
heavy-models = [
    "chronos-forecasting",
    "timesfm",
    "gluonts",
    "lightning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castclaw_ml"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (model training)"]

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pyinstaller>=6.19.0",
    "setuptools>=81.0.0",
]
